--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,9 @@
 <resources>
     <string name="app_name">Money Convertion</string>
     <string name="money_convertion_intro">Money Convertion adalah sebuah aplikasi konversi mata uang dari Rupiah ke berbagai mata uang negara lain</string>
-    <string name="berat_badan">Berat badan (kg)</string>
-    <string name="tinggi_badan">Tinggi badan (cm)</string>
-    <string name="jenis_kelamin">Jenis kelamin</string>
-    <string name="pria">Pria</string>
-    <string name="wanita">Wanita</string>
+    <string name="berat_badan">masukkan jumlah (IDR)</string>
     <string name="hitung">Hitung</string>
-    <string name="bmi_x">BMI: %1$.2f</string>
-    <string name="kurus">Kurus</string>
-    <string name="ideal">Ideal</string>
-    <string name="gemuk">Gemuk</string>
-    <string name="kategori_x">Kategori: %1$s</string>
-    <string name="berat_invalid">Berat tidak boleh kosong.</string>
-    <string name="tinggi_invalid">Tinggi tidak boleh kosong.</string>
-    <string name="gender_invalid">Pilih jenis kelamin.</string>
+    <string name="bmi_x">$ %1$.2f</string>
+    <string name="berat_invalid">Kolom tidak boleh kosong</string>
+
 </resources>
