memperbaiki nama variabel dan menambahkan tema gelap

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,13 @@
 <resources>
     <string name="app_name">Money Convertion</string>
     <string name="money_convertion_intro">Money Convertion adalah sebuah aplikasi konversi mata uang dari Rupiah ke berbagai mata uang negara lain</string>
-    <string name="berat_badan">masukkan jumlah (IDR)</string>
+    <string name="kolom_input_nominal">masukkan jumlah (IDR)</string>
     <string name="hitung">Hitung</string>
-    <string name="bmi_x">$ %1$.2f</string>
-    <string name="berat_invalid">Kolom tidak boleh kosong</string>
+    <string name="hasil_konvert">$ %1$.2f</string>
+    <string name="nominal_invalid">Kolom tidak boleh kosong</string>
+    <string name="pilihan">Pilihan</string>
+    <string name="idrToUsd">IDR > USD</string>
+    <string name="usdToIdr">USD > IDR</string>
+    <string name="radioInvalid">Pilih kurs terlebih dahulu</string>
 
 </resources>
