--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="idrToUsd">IDR > USD</string>
     <string name="usdToIdr">USD > IDR</string>
     <string name="radioInvalid">Pilih kurs terlebih dahulu</string>
-
+    <string name="usd_x">$ %1$s</string>
+    <string name="rp_x">Rp %1$s</string>
 </resources>
