--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="usd_x">$ %1$s</string>
     <string name="rp_x">Rp %1$s</string>
     <string name="pilihanKonversi">IDR ke USD</string>
+    <string name="copyright">Hak Cipta dalam aplikasi konversi mata uang ini dan segala kontennya, termasuk tetapi tidak terbatas pada desain, grafis, ikon, logo, teks, gambar, audio, video, dan perangkat lunak terkait
+        Money Convertion, dimiliki oleh Hermanus Hasta Wicaksana. \nDengan menggunakan Aplikasi ini, Anda dianggap telah membaca, memahami, dan menyetujui semua syarat dan ketentuan yang tercantum di atas.
+        Jika Anda tidak setuju dengan syarat dan ketentuan ini, harap menghentikan penggunaan Aplikasi ini.\nCopyright ©2023 All Rights Reserved.</string>
 </resources>
