--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,13 +12,13 @@
     <string name="usd_x">$ %1$s</string>
     <string name="rp_x">Rp %1$s</string>
     <string name="pilihanKonversi">IDR ke USD</string>
-    <string name="copyright">Hak Cipta dalam aplikasi konversi mata uang ini dan segala kontennya, termasuk tetapi tidak terbatas pada desain, grafis, ikon, logo, teks, gambar, audio, video, dan perangkat lunak terkait
-        Money Convertion, dimiliki oleh Hermanus Hasta Wicaksana. \nDengan menggunakan Aplikasi ini, Anda dianggap telah membaca, memahami, dan menyetujui semua syarat dan ketentuan yang tercantum di atas.
+    <string name="copyright">Hak Cipta dalam aplikasi konversi mata uang ini dan segala kontennya,tidak terbatas pada desain, grafis, ikon, logo, teks, gambar, dan perangkat lunak terkait
+        Money Convertion, dimiliki oleh Hermanus Hasta Wicaksana. Dengan menggunakan Aplikasi ini, Anda dianggap telah membaca, memahami, dan menyetujui semua syarat dan ketentuan yang tercantum di atas.
         Jika Anda tidak setuju dengan syarat dan ketentuan ini, harap menghentikan penggunaan Aplikasi ini.\nCopyright ©2023 All Rights Reserved.</string>
     <string name="hapus_histori">Hapus Histori</string>
     <string name="tentang_aplikasi">Tentang Aplikasi</string>
     <string name="histori">Histori</string>
-    <string name="konversi_textView">Konversikan IDR ke USD maupun Sebaliknya</string>
+    <string name="konversi_textView">Konversikan Sekarang Juga</string>
     <string name="idr_main">IDR</string>
     <string name="usd_main">USD</string>
     <string name="hapus">Hapus</string>
@@ -26,5 +26,8 @@
     <string name="batal">Batal</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="jenisKonversiIdrToUSD">IDR > USD</string>
+    <string name="jenisKonversiUSDToIDR">USD > IDR</string>
+    <string name="cekMedSos">Lihat sosial media kami di bawah ini </string>
 
 </resources>
